[package]
name = "peiji"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0"
redis = { version = "0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
